  pthread compile error.
- reap return code from child at startup.
- add check for self inclusion when including maps.
- add plus map inclusion depth limit.
- fix logic to check if map update is needed.
- fix shutdown wait for submounts again (and again ...).
- add check for filesystem autofs in /proc/filesystems in case
  it's complied in the kernel.

1/5/2006 autofs-5.0.0_beta1
------------------------------
- Initial update.
  - direct mounts.
  - lazy multi-mounts.
  - added kernel module to source tree.
- merged depricated LDAP patch.
- merged configurable locking patch.
- implemented nsswitch lookup for client maps.
- sync kernel module source.
- more kernel module fixes.
- redo mapenty cache locking and start work on
  background map refresh.
- fix hosts map (broken by mapentry cache locking update).
- fix expire of multi-mount with no root mount.
- final v5 comms packet definition (famous last words).
- remove goto from loop.
- add missing definition of _GNU_SOURCE for strerror_r.
- fix error handling fix for SIGCHLD handler.
- read map in sub-thread progresses.
- add cancelation cleanup routine to expire.
- correct error handling in lookup_ghost.
- remove redundant pthread mutex definition from mapent_cache.
- merged signal_children cleanup patch.
- first cut '+' included maps for client maps.
- move directory management of cache prune out of cache code.
- fix cache enumeration.
- fix cache update of multi-mount entries on umount.
- fix fail to close ioctl on direct mount fail.
- add hesiod to nss source list.
- allow for maps that don't support enumeration.
- add '+' included maps in key lookup (missed this).
- fix update detection following addition of '+' key lookup.
- convert mapent cache to live within autofs_point struct.
- convert submounts to use a thread instead of a process.
- fix rootless multi-mount as target of direct mount.
- fix sub-mount brakage following above.
- fix sub-mount as target of direct mount.