@@ -1,11 +1,11 @@
 #!/bin/bash
 
-# $Id: auto.smb,v 1.4 2005/04/11 11:30:54 raven Exp $
+# $Id: auto.smb,v 1.3 2005/04/05 13:02:09 raven Exp $
 
 # This file must be executable to work! chmod 755!
 
 key="$1"
-opts="-fstype=smbfs"
+opts="-fstype=cifs"
 
 for P in /bin /sbin /usr/bin /usr/sbin
 do
@@ -20,7 +20,7 @@ done
 
 $SMBCLIENT -gNL $key 2>/dev/null| awk -v key="$key" -v opts="$opts" -F'|' -- '
 	BEGIN	{ ORS=""; first=1 }
-	/Disk/	{ if (first) { print opts; first=0 }; print " \\\n\t /" $2, "://" key "/" $2 }
+	/Disk/	{ if (first) { print opts; first=0 }; sub(/ /, "\\ ", $2); print " \\\n\t /" $2, "://" key "/" $2 }
 	END 	{ if (!first) print "\n"; else exit 1 }
 	'
 
